src/test/deca/context/invalid/provided/and_type_incompatible6.deca
/*/ Description:
//    Programme effectuant l'opération or de façon incorrecte.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        boolean a = true;

        boolean c = a && "yes";
}
